# simple-chat-ui

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: dependabot.yml  main.yml
app/: __init__.py
app/api/: __init__.py  chatapi.py  examplify.py
app/components/: __init__.py  chat.py  sidebar.py
app/helpers/: __init__.py  session_state.py  try_connect.py
app/types/: __init__.py  message.py  session_state.py
