[tool.pylint.format]
good-names = ["x", "y", "z", "id", "ok"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "unnecessary-ellipsis",
    "too-many-positional-arguments",
]

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "simple-chat-ui"
version = "0.1.0"
description = ""
authors = ["winstxnhdw <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
httpx = "^0.28.1"
h2 = "^4.1.0"
httpx-sse = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.392"
pylint = "^3.3.3"
ruff = "^0.9.3"
