[project]
name = "simple-chat-ui"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = ["h2>=4.2.0", "httpx>=0.28.1", "httpx-sse>=0.4.0", "streamlit>=1.44.1"]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=22.15.0", "pyright>=1.1.400", "ruff>=0.11.7"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D205", "D212", "D400", "D413", "D415", "D417", "TC001", "PLR0913", "PLC0414"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
