[project]
name = "simple-chat-ui"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.14"
dependencies = ["h2>=4.3.0", "httpx>=0.28.1", "httpx-sse>=0.4.3", "streamlit>=1.50.0"]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=22.20.0", "pyright>=1.1.406", "ruff>=0.14.1"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D205", "D212", "D400", "D413", "D415", "D417", "TC001", "PLR0913", "PLC0414"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
